[gd_scene load_steps=9 format=3 uid="uid://co1arptro4wbk"]

[ext_resource type="Script" uid="uid://cp3l3muckag3y" path="res://Scenes/Stages/Scripts/main_menu.gd" id="1_xamy8"]
[ext_resource type="Texture2D" uid="uid://d3fecxfi6qdfs" path="res://Assets/Menu/Title_Main_Menu_1.png" id="2_lhiuk"]
[ext_resource type="Texture2D" uid="uid://2n80vopu5jw1" path="res://Assets/Menu/Bacgkround_Main_Menu.png" id="3_i1wka"]
[ext_resource type="FontFile" uid="uid://c4taoa7bk06us" path="res://Assets/Fonts/CALIFB.TTF" id="4_g81y2"]
[ext_resource type="Script" path="res://Scenes/Stages/Scripts/button_animation.gd" id="5_saren"]
[ext_resource type="Texture2D" uid="uid://cxikslb53m3q8" path="res://Assets/Menu/Indikator_Left.png" id="6_nsg0c"]
[ext_resource type="Texture2D" uid="uid://bkg65yfm2wn6x" path="res://Assets/Menu/Indikator_RIght.png" id="7_d5opv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vys5n"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_xamy8")

[node name="Title" type="TextureRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 203.00002
offset_top = -97.00001
offset_right = 2163.0
offset_bottom = 1197.0
scale = Vector2(0.45843145, 0.4442283)
texture = ExtResource("2_lhiuk")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.62365586, 0.62365586)
texture = ExtResource("3_i1wka")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 467.0
offset_top = 329.0
offset_right = 587.0
offset_bottom = 447.0
scale = Vector2(2.9899166, 2.9899166)
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("4_g81y2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vys5n")
toggle_mode = true
flat = true
icon_alignment = 1
script = ExtResource("5_saren")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/StartButton"]
layout_mode = 0
offset_left = -9.699268
offset_top = -13.712746
offset_right = 133.30074
offset_bottom = 42.287254
alignment = 1

[node name="LeftIcon" type="TextureRect" parent="VBoxContainer/StartButton/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("6_nsg0c")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/StartButton/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g81y2")
theme_override_font_sizes/font_size = 18
text = "Start Game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightIcon" type="TextureRect" parent="VBoxContainer/StartButton/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(10, 5)
layout_mode = 2
texture = ExtResource("7_d5opv")
expand_mode = 1
stretch_mode = 5

[node name="LevelSelectionButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("4_g81y2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vys5n")
toggle_mode = true
flat = true
icon_alignment = 1
script = ExtResource("5_saren")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/LevelSelectionButton"]
layout_mode = 0
offset_left = -8.361439
offset_top = -6.5744743
offset_right = 134.63857
offset_bottom = 49.425526
alignment = 1

[node name="LeftIcon" type="TextureRect" parent="VBoxContainer/LevelSelectionButton/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("6_nsg0c")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/LevelSelectionButton/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g81y2")
theme_override_font_sizes/font_size = 18
text = "Level Selection"

[node name="RightIcon" type="TextureRect" parent="VBoxContainer/LevelSelectionButton/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(10, 5)
layout_mode = 2
texture = ExtResource("7_d5opv")
expand_mode = 1
stretch_mode = 5

[node name="QuitButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(20, 40)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("4_g81y2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_vys5n")
toggle_mode = true
flat = true
icon_alignment = 1
script = ExtResource("5_saren")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/QuitButton"]
layout_mode = 0
offset_left = -7.692522
offset_top = -9.436195
offset_right = 135.30748
offset_bottom = 46.563805
alignment = 1

[node name="LeftIcon" type="TextureRect" parent="VBoxContainer/QuitButton/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
texture = ExtResource("6_nsg0c")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/QuitButton/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_g81y2")
theme_override_font_sizes/font_size = 18
text = "Quit"

[node name="RightIcon" type="TextureRect" parent="VBoxContainer/QuitButton/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(10, 5)
layout_mode = 2
texture = ExtResource("7_d5opv")
expand_mode = 1
stretch_mode = 5

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LevelSelectionButton" to="." method="_on_level_selection_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
