extends Control

func _on_start_button_pressed() -> void:
	get_tree().change_scene_to_packed(preload("res://Scenes/Stages/1_Tutorial/tutorial_1.tscn"))


func _on_quit_button_pressed() -> void:
	get_tree().quit(0)


func _on_level_selection_button_pressed() -> void:
	get_tree().change_scene_to_packed(GameStates.scene_level_selector)
